--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Instageram"
-        >
+        android:theme="@style/Theme.Instageram">
         <service
             android:name=".pushnotification.FirebaseMessagingServices"
             android:permission="com.google.android.c2dm.permission.SEND">
@@ -27,18 +26,32 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".main.ui.view.myprofile.EditProfileActivity"/>
-        <activity android:name=".main.ui.view.myprofile.MakePostActivity" />
-        <activity android:name=".dummy.DummyActivity" />
-        <activity android:name=".camerax.CameraActivity" />
-        <activity android:name=".auth.ui.view.AuthActivity" />
-        <activity android:name=".SplashScreenActivity">
+        <activity
+            android:name=".main.ui.view.myprofile.EditProfileActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".main.ui.view.myprofile.MakePostActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".dummy.DummyActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".camerax.CameraActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".auth.ui.view.AuthActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SplashScreenActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".main.ui.view.MainActivity" />
+        <activity
+            android:name=".main.ui.view.MainActivity"
+            android:screenOrientation="portrait" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
